# pollendina

./: 01_intro.html  02_install.html  02_quick_start.html  02_quick_start_action_bar.html  02_quick_start_broadcast_window.html  02_quick_start_config_window.html  02_quick_start_key_item_view.html  02_quick_start_map_view.html  03_01_quick_start_action_bar.html  03_02_quick_start_key_item_view.html  03_03_quick_start_map_view.html  03_04_quick_start_config_window.html  03_05_quick_start_broadcast_window.html  03_auto_tracking.html  03_quick_start.html  04_auto_tracking.html  04_credits.html  05_credits.html  CNAME  Cargo.toml  LICENSE  README.md  build.rs  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: env-setup.sh  gh-pages.yml  package.yml  rust.yml
docs/: book.toml
docs/src/: 01_intro.md  02_install.md  02_quick_start.md  02_quick_start_action_bar.md  02_quick_start_map_view.md  03_01_quick_start_action_bar.md  03_02_quick_start_key_item_view.md  03_03_quick_start_map_view.md  03_04_quick_start_config_window.md  03_05_quick_start_broadcast_window.md  03_auto_tracking.md  03_quick_start.md  04_credits.md  SUMMARY.md
mods/ff4fe/: auto_track.lua  bosses.json  flags.json  key-items.json  locations.json  manifest.json  misc.json  objectives.json  pseudo.json
mods/ff4fe/layouts/: broadcast.json  checks.json  key-item-count.json  key-item-grid.json  main.json  maps.json
mods/ff4fe/maps/: moon.json  overworld.json  underground.json
resources/: main.wxs
src/: main.rs  views.rs
src/assets/: image.rs  mod.rs
src/engine/: auto_tracker.rs  expression.rs  mod.rs  module.rs
src/engine/display/: mod.rs  view.rs
src/engine/test_data/mod/: key-items.json  manifest.json
src/widget/: asset.rs  click_ext.rs  constellation.rs  container.rs  dyn_flex.rs  grid.rs  list_iter.rs  map.rs  map_node.rs  map_objective.rs  mod.rs  modal_host.rs  node.rs  objective.rs  stack.rs
