[package]
name = "pollendina"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5", features = ["attributes", "unstable"] }
byteorder = "1.3.4"
druid = {version = "0.6.0", features = ["image"] }
failure = "0.1.8"
futures ="0.3"
image = {version = "0.23.4"}
log = "0.4.8"
nom = "5.1.1"
palette = "0.5.0"
path-slash = "0.1.1"
petgraph = "0.5.1"
rlua = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
usb2snes = "0.1.0"
match-macro = { path = "./third_party/druid-enum-helpers/match-macro"}