[package]
name = "pollendina"
version = "0.1.1"
authors = ["Erik Gilling <konkers@konkers.net>"]
description = "A multi-rando tracker."
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5", features = ["attributes", "unstable"] }
byteorder = "1.3.4"
druid = {version = "0.6.0", features = ["image"] }
failure = "0.1.8"
futures ="0.3"
image = {version = "0.23.4"}
log = "0.4.8"
nom = "5.1.1"
palette = "0.5.0"
path-slash = "0.1.1"
petgraph = "0.5.1"
rlua = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
usb2snes = "0.1.0"
match-macro = { path = "./third_party/druid-enum-helpers/match-macro"}


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Pollendina"
identifier = "io.github.konkers.pollendina"
resources = ["mods"]
icon = ["resources/icon-32x32.png", "resources/icon-128x128.png"]
osx_minimum_system_version = "10.13"
deb_deps = ["libgtk-3", "libx11"]

[package.metadata.wix]
compiler-args = ["-dModsSource=mods", "-arch", "x64"]
include = ["resources/main.wxs", "target/wix/mods.wxs"]
